--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p src",
+    "build-and-pack": "npm run build && npm pack",
     "watch": "tsc -p src -w",
     "test": "nyc ts-mocha \"test/**/*.ts\" --slow 300 -p src/tsconfig.json",
     "lint": "tslint -p src/",
@@ -48,24 +49,24 @@
     "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/mocha": "^8.2.3",
-    "@types/shelljs": "^0.8.9",
-    "mocha": "^9.0.2",
-    "nyc": "^15.1.0",
-    "source-map-support": "^0.5.19",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "handlebars": "4.7.7",
     "@types/node": "^16.3.1",
+    "@types/shelljs": "^0.8.9",
     "all-contributors-cli": "^6.20.0",
     "aws-sdk-mock": "^5.2.1",
     "chai": "^4.3.4",
+    "handlebars": "4.7.7",
     "istanbul": "^0.4.5",
+    "mocha": "^9.0.2",
+    "nyc": "^15.1.0",
     "prettier": "2.3.2",
     "sinon": "^11.1.1",
+    "source-map-support": "^0.5.19",
+    "ts-loader": "^9.2.3",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.1.0",
     "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.7.4"
   },
   "nyc": {
     "extension": [
