--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "serverless-offline-sns",
+  "name": "@ormu5/serverless-offline-sns",
   "version": "0.76.0",
-  "description": "Serverless plugin to run a local SNS server and call lambdas with events notifications.",
+  "description": "Fork of serverless-offline-sns. Serverless plugin to run a local SNS server and call lambdas with events notifications, with fixes to support SQS subscriptions.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p src",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mj1618/serverless-offline-sns.git"
+    "url": "git+https://github.com/ormu5/serverless-offline-sns.git"
   },
   "keywords": [
     "serverless-plugin",
@@ -30,18 +30,18 @@
   "author": "Matthew James <matthew.stephen.james@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mj1618/serverless-offline-sns/issues"
+    "url": "https://github.com/ormu5/serverless-offline-sns/issues"
   },
-  "homepage": "https://github.com/mj1618/serverless-offline-sns#readme",
+  "homepage": "https://github.com/ormu5/serverless-offline-sns#readme",
   "dependencies": {
-    "lodash": "^4.17.21",
-    "node-fetch": "^2.6.1",
-    "serverless": "^2.51.2",
-    "shelljs": "^0.8.4",
     "aws-sdk": "^2.943.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.1",
+    "serverless": "^2.51.2",
+    "shelljs": "^0.8.4",
     "uuid": "^8.3.2",
     "xml": "^1.0.1"
   },
